--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container{
     height: 100vh;
     width: 100vw;
-    background-color: rgb(146, 192, 192);
+    /* background-color: rgb(146, 192, 192); */
     display: grid;
     grid-template-rows: 1fr 15fr;
     /* margin: auto; */
@@ -15,10 +15,12 @@
 
 .header{
     grid-column:1/-1 ;
-    background-color: white;
+    /* background-color: rgb(160, 102, 102); */
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 0 200px;
+    
 }
 .head-nav-left{
     display: flex;
@@ -44,12 +46,13 @@ a{
 .main-body{
     grid-column: 1/-1;
     background-color: white;
+    padding:0 200px;
 }
 .section-top{
     /* background-color: antiquewhite; */
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .sec-div-right{
     height: 20vh;
@@ -85,40 +88,67 @@ h1{
     /* background-color: red; */
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 20px;
+    /* padding: 0 150px; */
 }
 .sec-mid-div{
     /* background-color: skyblue; */
     height: 400px;
-    width: 77vw;
+    width: 67vw;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;justify-content: space-around;
+    gap: 30px;justify-content:space-evenly;
     /* align-items:start; */
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 40px;
 }
 .box{
-    height: 40%;
-    width: 12%;
+    height: 50%;
+    width: 11%;
     /* background-color:  red; */
     /* border: 1px solid black; */
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    /* margin-top: 100px; */
+    /* padding-top: 30px; */
+}
+.gree{
+    background-color: rgb(154, 214, 154);
+    width: 136px;
+    height: 25px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.re{
+    background-color: rgb(224, 149, 149);
+    width: 136px;
+    height: 25px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-size: 10px;
 }
 .box-div{
-    height: 70%;
+    height: 60%;
     width: 100%;
     background-color: rgb(229, 243, 248);
+    margin-bottom: 20px;
+    border-radius: 10px;
 }
 p{
     color: rgb(70, 68, 68);
     /* background-color: orange; */
     /* display: inline; */
+    font-size: 0.8rem;
 }
 .nav-ind{
+    margin-top: 20px;
     /* background-color: red; */
     text-align: center;
     width: 100%;
@@ -132,21 +162,32 @@ p{
     /* background-color: red; */
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 .sec-last-span{
-        background-color: skyblue;
-    height: 400px;
-    width: 77vw;
+    /* background-color: aqua; */
+    width: 87%;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;justify-content: space-around;
-    /* align-items:start; */
-    padding-top: 30px;
-    padding-bottom: 30px;
+    gap: 20px;
+    /* padding: 20px 0; */
+    padding-left: 20px;
+    padding-bottom: 10px;
+    
 }
 .sec-span{
-    height: 50px;
-    min-width: 70px;
-    /* background-color: orange; */
+    /* background-color: rgb(112, 110, 110); */
+    padding: 10px 14px;
+    font-size: 14px;
+    white-space: nowrap;
+    width: fit-content;
+    box-shadow: 1px 1px 10px rgb(175, 174, 174);
+    border-radius: 5px;
+    font-size: 12px;
 }
+ul{
+    padding: 1px;
+}
+ /* li{
+    padding: 0;
+ } */
